@@ -1,6 +1,6 @@
 {
   "name": "pyhardmode",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "factorio_version": "1.1",
   "title": "Pyanodons Hard Mode",
   "author": "notnotmelon",
